--- a/Assets/Styles/sharedLayout.css
+++ b/Assets/Styles/sharedLayout.css
@@ -13,7 +13,7 @@
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 20px;
-  text-align: right;
+  text-align: center;
 }
 
 .create-order {
@@ -65,6 +65,10 @@
   margin-right: 270px;
   padding: 20px;
   margin-top: 60px;
+
+  /* Arabic text direction */
+  direction: rtl;
+  text-align: right;
 }
 .topbar {
   width: calc(100% - 240px);
