--- a/Assets/Styles/dash-Boards/administrativeSupervisorDashboard.css
+++ b/Assets/Styles/dash-Boards/administrativeSupervisorDashboard.css
@@ -89,6 +89,13 @@
   background-color: red;
 }
 
+footer {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #666;
+}
+
 @media (max-width: 600px) {
   .card-content {
     flex-direction: column;
