--- a/Assets/Styles/orderList.css
+++ b/Assets/Styles/orderList.css
@@ -69,7 +69,7 @@
   .popup {
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.5);
+    background: rgba(80, 80, 80, 0.842);
     display: flex;
     align-items: center;
     justify-content: center;
