--- a/Assets/Styles/dash-Boards/superUserDashboard.css
+++ b/Assets/Styles/dash-Boards/superUserDashboard.css
@@ -765,3 +765,9 @@ th, td {
 .menu-toggle {
     display: none;
 } 
+footer {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #666;
+}
