--- a/Assets/Styles/car-Managment/carList.css
+++ b/Assets/Styles/car-Managment/carList.css
@@ -276,3 +276,37 @@ h2 {
         width: 100%;
     }
 }
+
+@media (min-width: 1024px) and (max-width: 1920px) {
+  .container {
+    width: 85%;
+    padding: 30px;
+    margin: 30px auto;
+  }
+  .table-header,
+  .card {
+    grid-template-columns: repeat(7, 1fr);
+    font-size: 18px;
+    padding: 18px;
+  }
+  .cards-container {
+    gap: 18px;
+  }
+  .actions {
+    gap: 18px;
+    margin-top: 30px;
+  }
+  .actions input,
+  .actions select {
+    font-size: 18px;
+    padding: 12px 16px;
+  }
+  .actions button {
+    font-size: 18px;
+    padding: 12px 16px;
+  }
+  .pop-content {
+    width: 400px;
+    padding: 30px;
+  }
+}
