--- a/Assets/Styles/driver-Managment/driverDetails.css
+++ b/Assets/Styles/driver-Managment/driverDetails.css
@@ -290,3 +290,38 @@ td {
   padding: 8px;
   text-align: center;
 }
+
+@media (min-width: 1024px) and (max-width: 1920px) {
+  .container {
+    width: 80%;
+    padding: 40px;
+    margin: 40px auto;
+  }
+  .profile-pic {
+    width: 250px;
+    height: 250px;
+  }
+  .driver-title {
+    font-size: 44px;
+  }
+  .driver-info h2,
+  #driver-name {
+    font-size: 32px;
+  }
+  .form-container {
+    gap: 40px;
+    padding: 40px;
+  }
+  .input-group {
+    font-size: 20px;
+  }
+  .orders-table th,
+  .orders-table td {
+    font-size: 18px;
+    padding: 16px;
+  }
+  .modal-content {
+    padding: 40px;
+    min-width: 400px;
+  }
+}
